mem_reward_rule API
